# poly-agntcy

./: .env.example  .gitattributes  .gitignore  .golangci.yml  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  go.work  go.work.sum  lychee.toml  mise.toml  mise.toml.local.sample  release-please-config.json
.github/: .release-please-manifest.json  copilot-instructions.md  dependabot.yml  release-please-config.json
.github/workflows/: ci-conformance.yml  ci-cross.yml  ci-go.yml  ci-php.yml  ci-py.yml  ci-rs.yml  ci-ts.yml  publish.yml  release-please-preflight.yml  release-please.yml
adapters/django/: pyproject.toml
adapters/django/src/agntcy_dir_django/: apps.py  urls.py  views.py
adapters/django/tests/: conftest.py  test_views.py
adapters/express/: README.md  package.json  tsconfig.json
adapters/express/src/: index.ts
adapters/fastapi/: pyproject.toml
adapters/fastapi/src/agntcy_dir_fastapi/: cli.py
adapters/fastapi/tests/: test_router.py
adapters/flask/: README.md  pyproject.toml
adapters/flask/tests/: test_blueprint.py
adapters/hono/: package.json
adapters/laravel/: composer.json
adapters/laravel/src/: AgntcyServiceProvider.php
adapters/laravel/src/Facades/: Agntcy.php
adapters/next/: package.json
adapters/next/src/: cli.ts
adapters/next/test/: handler.test.ts
adapters/symfony/: composer.json
adapters/symfony/src/: AgntcyBundle.php
adapters/symfony/src/DependencyInjection/: AgntcyExtension.php  Configuration.php
cmd/agntcy/: describe.go  go.mod  go.sum  root.go
contracts/: README.md  buf.gen.yaml
docs/: ARCHITECTURE.md  README.md  RELEASING.md  release-runbook.md  vanity-import.md
docs/adr/: 0001-scope-dir-only-phase-one.md  0002-protobuf-bsr-pin-codegen-mise.md  0003-spiffe-optional-extension-per-language.md  0004-release-per-package-release-please.md  0005-layout-l3-flat-per-language.md  0006-naming-source-vanity-mirrors.md  0007-role-based-layout-sdk-adapter-split.md  0008-vendor-package-names.md  0009-mirror-publish-topology.md  0010-one-mirror-per-package.md  README.md
docs/manual/: commands.md  configuration.md  getting-started.md  install.md  troubleshooting.md  upgrade.md
docs/superpowers/plans/: 2026-05-30-poly-agntcy-bootstrap.md
docs/superpowers/specs/: 2026-05-30-poly-agntcy-design.md
e2e/conformance/: README.md  run.sh
examples/cross/: README.md  docker-compose.yml  go-agent.go  php-agent.php  py-agent.py  run.sh
examples/go/register-and-discover/: README.md  go.mod  main.go
examples/php/laravel-quickstart/: README.md  composer.json
examples/php/laravel-quickstart/app/Console/Commands/: RegisterInventoryAgent.php
examples/php/laravel-quickstart/config/: agntcy.php
examples/php/laravel-quickstart/routes/: web.php
examples/php/symfony-quickstart/: README.md  composer.json
examples/php/symfony-quickstart/config/: bundles.php  services.yaml
examples/php/symfony-quickstart/src/Command/: RegisterInventoryCommand.php
examples/php/vanilla-quickstart/: README.md  composer.json  index.php
examples/py/django-quickstart/: README.md  manage.py  pyproject.toml
examples/py/django-quickstart/agntcy_demo/: settings.py  urls.py
examples/py/fastapi-quickstart/: README.md  main.py  pyproject.toml
examples/py/flask-quickstart/: README.md  app.py  pyproject.toml
examples/rs/register-and-discover/: Cargo.toml  README.md
examples/rs/register-and-discover/src/: main.rs
examples/ts/express-quickstart/: README.md  package.json  server.ts
examples/ts/hono-edge/: README.md  index.ts  package.json
examples/ts/next-route/: README.md  package.json
examples/ts/next-route/app/api/agntcy/: route.ts
go/: .gitignore  .goreleaser.yml  Makefile  README.md  go.mod  go.sum  kit-template.yaml  main.go
go/cmd/: root.go
go/cmd/agntcy/: describe.go  discover.go  main.go  main_test.go  publish.go  register.go  root.go  verify.go
go/dir/: client.go  credentials_test.go  methods.go
go/spiffe/: credentials.go  credentials_test.go  go.mod  go.sum
php/: .gitignore  README.md  composer.json  kit-template.yaml  phpstan.neon  phpunit.xml.dist  tiers.yaml
php/src/: Application.php
php/src/Commands/: HelloCommand.php  ListCommand.php
php/tests/unit/: PlaceholderTest.php
proto/: README.md  buf.gen.yaml  buf.yaml
py/: README.md  kit-template.yaml  pyproject.toml  tiers.yaml
py/src/poly-agntcy/: __init__.py  cli.py
rs/: .gitignore  Cargo.toml  README.md  kit-template.yaml
rs/poly-agntcy-dir/: Cargo.toml
rs/poly-agntcy-dir-spiffe/: Cargo.toml
rs/poly-agntcy-dir-spiffe/src/: lib.rs
rs/poly-agntcy-dir/src/: client.rs  credentials.rs  lib.rs
rs/poly-agntcy-dir/tests/: smoke.rs
rs/src/: main.rs
rs/src/commands/: list.rs
rs/tests/: cli.rs
sdk/go/: Makefile  go.mod  go.sum
sdk/go/dir/: client_test.go  credentials.go  methods_test.go
sdk/go/internal/protostub/: stub.go
sdk/go/spiffe/: CHANGELOG.md  credentials_test.go  go.mod  go.sum
sdk/php/: README.md  composer.json  phpstan.neon  phpunit.xml.dist
sdk/py/: .gitignore  README.md  pyproject.toml
sdk/rs/: Cargo.toml  README.md
sdk/rs/hop-top-agntcy-dir/: Cargo.toml
sdk/rs/hop-top-agntcy-dir-spiffe/: Cargo.toml
sdk/rs/hop-top-agntcy-dir-spiffe/src/: lib.rs
sdk/rs/hop-top-agntcy-dir/src/: lib.rs  proto.rs
sdk/rs/hop-top-agntcy-dir/tests/: methods.rs  smoke.rs
sdk/rs/poly-agntcy-dir/: Cargo.toml
sdk/rs/poly-agntcy-dir-spiffe/: Cargo.toml
sdk/rs/poly-agntcy-dir-spiffe/src/: lib.rs
sdk/rs/poly-agntcy-dir/tests/: methods.rs
sdk/ts/: .npmrc  README.md  package.json  pnpm-workspace.yaml
ts/: README.md  kit-template.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json
ts/src/: cli.ts
