[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poly-agntcy"
version = "0.0.0"
description = "Polyglot SDK suite for the AGNTCY Agent Directory Service (DIR)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Jad Bitar", email = "jadb@users.noreply.github.com" },
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
"poly-agntcy" = "poly-agntcy.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/poly-agntcy"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
