[project]
name = "poly-agntcy-py-workspace"
version = "0.0.0"
description = "Workspace root (not published)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
poly-agntcy-dir-fastapi = { workspace = true }
poly-agntcy-dir-flask = { workspace = true }
poly-agntcy-dir-django = { workspace = true }

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.5",
]
