[project]
name = "poly-agntcy-py-workspace"
version = "0.0.0"
description = "Workspace root (not published)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
poly-agntcy-dir-fastapi = { workspace = true }
poly-agntcy-dir-flask = { workspace = true }
poly-agntcy-dir-django = { workspace = true }

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.5",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
