[project]
name = "hop-top-agntcy-dir-fastapi"
version = "0.0.0"
description = "FastAPI adapter for AGNTCY Directory Service"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "agntcy-dir>=0.3,<2",
  "fastapi>=0.115",
  "typer>=0.15",
]

[project.scripts]
agntcy = "agntcy_dir_fastapi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agntcy_dir_fastapi"]
