[project]
name = "hop-top-agntcy-dir-flask"
version = "0.0.0"
description = "Flask adapter for AGNTCY Directory Service"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "agntcy-dir>=0.3,<2",
  "flask>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agntcy_dir_flask"]
