[package]
name = "poly-agntcy-dir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AGNTCY Directory Service SDK for Rust"

[dependencies]
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustls = "0.23"
thiserror = "2"
