[package]
name = "poly-agntcy-dir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AGNTCY Directory Service SDK for Rust"

[[bin]]
name = "agntcy"
path = "src/bin/agntcy.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustls = "0.23"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
