[package]
name = "poly-agntcy-dir"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AGNTCY Directory Service SDK for Rust"

[features]
default = []
cli = ["dep:clap", "dep:anyhow"]

[[bin]]
name = "agntcy"
path = "src/bin/agntcy.rs"
required-features = ["cli"]

[dependencies]
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustls = "0.23"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"], optional = true }
anyhow = { version = "1", optional = true }
