[project]
name = "hop-top-example-django-quickstart"
version = "0.0.0"
description = "Django quickstart for hop-top-agntcy-dir-django"
requires-python = ">=3.12"
dependencies = [
  "hop-top-agntcy-dir-django",
  "django>=5.0",
]

[tool.uv.sources]
hop-top-agntcy-dir-django = { path = "../../../adapters/django", editable = true }
