[project]
name = "poly-agntcy-example-fastapi-quickstart"
version = "0.0.0"
description = "FastAPI quickstart for poly-agntcy-dir-fastapi"
requires-python = ">=3.12"
dependencies = [
  "poly-agntcy-dir-fastapi",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[tool.uv.sources]
poly-agntcy-dir-fastapi = { path = "../../../py/packages/dir-fastapi", editable = true }
