[project]
name = "hop-top-example-fastapi-quickstart"
version = "0.0.0"
description = "FastAPI quickstart for hop-top-agntcy-dir-fastapi"
requires-python = ">=3.12"
dependencies = [
  "hop-top-agntcy-dir-fastapi",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[tool.uv.sources]
hop-top-agntcy-dir-fastapi = { path = "../../../adapters/fastapi", editable = true }
