[project]
name = "hop-top-example-flask-quickstart"
version = "0.0.0"
description = "Flask quickstart for hop-top-agntcy-dir-flask"
requires-python = ">=3.12"
dependencies = [
  "hop-top-agntcy-dir-flask",
  "flask>=3.0",
]

[tool.uv.sources]
hop-top-agntcy-dir-flask = { path = "../../../adapters/flask", editable = true }
