[package]
name = "poly-agntcy-example-register-and-discover"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
poly-agntcy-dir = { path = "../../../sdk/rs/poly-agntcy-dir" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
