[package]
name = "hop-top-example-register-and-discover"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
hop-top-agntcy-dir = { path = "../../../sdk/rs/hop-top-agntcy-dir" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
